--- a/layouts/partials/widgets/about.html
+++ b/layouts/partials/widgets/about.html
@@ -19,7 +19,7 @@
 
 <!-- About widget -->
 <div class="row">
-  <div class="container centered">
+  <div class="col-12 col-lg-4">
 
       <ul class="network-icon" aria-hidden="true">
         {{ range $person.social }}
