--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -48,18 +48,26 @@
 }
 
 .portrait-title h2 {
-  font-size: 1.4em;
+  font-size: 1.5em;
   font-weight: 300;
   color: #000000;
-  margin: 30px 0 10px 0;
+  margin: 30px 0 5px 0;
 }
 
 .portrait-title h3 {
   font-size: 0.9rem;
-  font-weight: 300;
-  color: rgba(0,0,0, 0.54);
+  font-weight: 500;
+  color: rgba(0,0,0, 0.60);
   margin: 0px 0 10px 0;
 }
+
+.portrait-title h4 {
+  font-size: 0.8rem;
+  font-weight: 300;
+  color: rgba(0,0,0, 0.54);
+  margin: 0px 0 0px 0;
+}
+
 
 ul.network-icon {
   display: inline-flex;
@@ -116,3 +124,23 @@ ul.ul-edu li .description p.institution {
   font-size: 0.75rem;
   color: rgba(0,0,0,0.6);
 }
+
+/*************************************************
+ *  Biohome
+ **************************************************/
+
+ .biohome-title h1 {
+   font-size: 3em;
+   font-weight: 300;
+   color: #000000;
+   margin: 30px 0 20px 0;
+ }
+
+.biohome-title h4 {
+   font-size: 1rem;
+   font-weight: 300;
+   color: rgba(0,0,0, 0.6);
+   margin: 0px 100px 10px 100px;
+   line-height: 160%;
+   text-align: justify;
+ }
