--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -136,11 +136,31 @@ ul.ul-edu li .description p.institution {
    margin: 30px 0 20px 0;
  }
 
-.biohome-title h4 {
+.biohome-title p {
    font-size: 1rem;
    font-weight: 300;
-   color: rgba(0,0,0, 0.6);
+   color: rgba(0,0,0, 1);
    margin: 0px 50px 10px 50px;
    line-height: 160%;
    text-align: justify;
  }
+
+ /*************************************************
+  *  Bio
+  **************************************************/
+
+  .bio h1 {
+    font-size: 3em;
+    font-weight: 300;
+    color: #000000;
+    margin: 30px 0 20px 0;
+  }
+
+ .bio p {
+    font-size: 5rem;
+    font-weight: 300;
+    color: rgba(0,0,0, 1);
+    margin: 0px 0px 10px 0px;
+    line-height: 160%;
+    text-align: justify;
+  }
