--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,16 +1,16 @@
 /*************************************************
  *  Navigation bar
  **************************************************/
-
  /*************************************************
   *  Navigation bar
   **************************************************/
 
  .navbar {
-   height: 70px;
+   height: 50px;
    background: $sta-menu-primary;
-   box-shadow: 0 0.125rem 0.25rem 0 rgba(0,0,0,.11);
-   font-size: #{$sta-font-size-small}px;
+   box-shadow: 0 0.1rem 0.55rem 0 rgba(0,0,0,.11);
+   font-size: 13px;
+   font-weight: 400;
    position: fixed;
    top: 0;
    right: 0;
@@ -118,9 +118,13 @@
    // Set v-padding to 5px to align with 50/70px responsive max navbar heights.
    padding-top: 5px;
    padding-bottom: 5px;
-   font-weight: bold;
+   font-size: 15pt;
+   font-weight: 500;
    position: relative;
    z-index: 1030;  // For z-index clickable mobile logo.
+ }
+ a.navbar-brand {
+ color: rgba(0,0,0,.7);
  }
 
  // Dynamically fit logo image to space available.
@@ -139,6 +143,7 @@
  #navbar-main .main-menu-item ul li .nav-link {
    color: $sta-menu-text;
  }
+
 
  @include media-breakpoint-down(md) {
    // Used in conjunction with mobile .navbar-brand to center logo on mobile.
