--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -15,6 +15,7 @@
    top: 0;
    right: 0;
    left: 0;
+   bottom: 0;
    z-index: 1030;
 
    // Remove Bootstrap's navbar v-padding and assign v-padding to logo separately to maximise logo size.
