--- a/layouts/partials/widgets/about.html
+++ b/layouts/partials/widgets/about.html
@@ -68,45 +68,13 @@
       <div class="biohome-title">
         <h1>{{ $person.greetings }}</h1>
         {{ with $person.biohome }}<p>{{ . | markdownify | emojify }}</p>{{ end }}
+        {{ with $person.biohome1 }}<p>{{ . | markdownify | emojify }}</p>{{ end }}
+        {{ with $person.biohome2 }}<p>{{ . | markdownify | emojify }}</p>{{ end }}
 
     </div>
   </div>
   <div class="container centered">
 
-    {{/* Only display widget title in explicit instances of about widget, not in author pages. */}}
-    {{ if and $page.Params.widget $page.Title }}<h3>{{ $page.Title | markdownify | emojify }}</h3>{{ end }}
-
-    {{ $person_page.Content }}
-
-    <div class="row">
-
-      {{ with $person.interests }}
-      <div class="col-md-5">
-        <h3>{{ i18n "interests" | markdownify }}</h3>
-        <ul class="ul-interests">
-          {{ range . }}
-          <li>{{ . | markdownify | emojify }}</li>
-          {{ end }}
-        </ul>
-      </div>
-      {{ end }}
-
-      {{ with $person.education }}
-      <div class="col-md-7">
-        <h3>{{ i18n "education" | markdownify }}</h3>
-        <ul class="ul-edu fa-ul">
-          {{ range .courses }}
-          <li>
-            <i class="fa-li fas fa-graduation-cap"></i>
-            <div class="description">
-              <p class="course">{{ .course }}{{ with .year }}, {{ . }}{{ end }}</p>
-              <p class="institution">{{ .institution }}</p>
-            </div>
-          </li>
-          {{ end }}
-        </ul>
-      </div>
-      {{ end }}
 
     </div>
   </div>
