--- a/layouts/partials/widgets/experience.html
+++ b/layouts/partials/widgets/experience.html
@@ -2,12 +2,11 @@
 {{ $page := .page }}
 
 <!-- Experience widget -->
-<div class="row">
-  <div class="col-12 col-lg-4 section-heading">
-    <h1>{{ with $page.Title }}{{ . | markdownify }}{{ end }}</h1>
+<div class="col">
+  <div class="col col-md">
     {{ with $page.Params.subtitle }}<p>{{ . | markdownify }}</p>{{ end }}
   </div>
-  <div class="col-12 col-lg-8">
+  <div class="col col-lg-8">
     {{ with $page.Content }}{{ . }}{{ end }}
 
     {{ if $page.Params.experience }}
